Added GetPartition and ListPartitions
